--- a/imagegrid.css
+++ b/imagegrid.css
@@ -65,7 +65,7 @@ body {
 
 .text {
   color: white;
-  font-size: 13px;
+  font-size: 11px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -77,10 +77,31 @@ body {
 
 a {
     background-color: none;
-    color: white;
+    color: blue;
     padding: 14px 15px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-family: courier;
+}
+
+/* button */
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: gray; /* Remove outline */
+    background-color: black; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 80px; /* Rounded corners */
+    font-size: 15px; /* Increase font size */
+}
+
+#myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
 }
