--- a/soup.css
+++ b/soup.css
@@ -21,7 +21,7 @@ input[type=text]:focus, input[type=password]:focus {
 }
 /* Set a style for all buttons */
 button {
-    background-color: #ffff96;
+    background-color: #dee5f4;
     padding: 14px 20px;
     margin: 8px 0;
     cursor: pointer;
@@ -117,17 +117,9 @@ hr {
       <h1>Sign Up</h1>
       <p>Please fill in this form to create an account.</p>
       <hr>
-      <label for="name"><b>Name</b></label>
-      <input type="text" placeholder="Enter Name" name="name" required>
-      <label for="Last-Name"><b>Last Name</b><label>
-      <input typer="text" placeholder="Enter Last Name" name"Last-Name" required>
+
       <label for="email"><b>Email</b></label>
       <input type="text" placeholder="Enter Email" name="email" required>
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
-      <label for="psw-repeat"><b>Repeat Password</b></label>
-      <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-      <label>
         <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
       </label>
       <p>By creating an account you agree to our <a href="" style="color:dodgerblue">Terms & Privacy</a></p>
