--- a/map-style.css
+++ b/map-style.css
@@ -1,6 +1,7 @@
 #map {
-width: 1270px;
+width: 90%;
 height: 550px;
+margin-left: 5%;
 }
 .custom .leaflet-popup-tip,
 .custom .leaflet-popup-content-wrapper {
