--- a/index.css
+++ b/index.css
@@ -86,7 +86,7 @@ a {
 }
 
 /* button */
-#myBtn {
+/* #myBtn {
     display: none; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
     bottom: 20px; /* Place the button at the bottom of the page */
@@ -102,7 +102,7 @@ a {
     font-size: 15px; /* Increase font size */
 }
 
-#myBtn:hover {
+/* #myBtn:hover {
     background-color: #555; /* Add a dark-grey background on hover */
 }
 
@@ -160,4 +160,24 @@ a {
     visibility: visible;
     transform: scale(1.0);
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.sizeBtn {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  display: relative;
+	border-radius:15px;
+}
+
+#smallText {
+    font-size:small;
+}
+
+#mediumText {
+    font-size:medium;
+}
+
+#largeText {
+    font-size:large;
 }
