--- a/index.css
+++ b/index.css
@@ -78,44 +78,13 @@ body {
 a {
     background-color: none;
     color: blue;
-    /*padding: 14px 15px; */
+    padding: 14px 15px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-family: courier;
 }
 
-/* button */
-/* #myBtn {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: gray; /* Remove outline */
-    background-color: black; /* Set a background color */
-    color: white; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
-    border-radius: 80px; /* Rounded corners */
-    font-size: 15px; /* Increase font size */
-}
-
-/* #myBtn:hover {
-    background-color: #555; /* Add a dark-grey background on hover */
-}
-
-.footer {
-   position: bottom;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   background-color: black;
-   color: white;
-   text-align: center;
-   font-family: courier;
-}
 
 .navigationbar {
   font-family: courier;
@@ -184,4 +153,37 @@ a {
 #largeText {
     font-size:x-large;
     font-weight:bold;
+}
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+
+#logo {
+  width: 90px;
+  height: 55px;
+}
+
+.icons {
+  font-size: 20px;
+  background: black;
+  padding:2px;
+  border-radius: 50%;
+
 }
