--- a/index.css
+++ b/index.css
@@ -5,11 +5,17 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #e8f9f9;
+    color: #5c6377;
+    font-family: courier;
+
 }
 
 .header {
     text-align: center;
     padding: 50px;
+    background-color:#e8f9f9;
+    width: 1300px;
 }
 
 .row {
@@ -18,6 +24,7 @@ body {
     -ms-flex-wrap: wrap; /* IE 10 */
     flex-wrap: wrap;
     padding: 1 1px;
+    background-color:
 }
 
 /* Create two equal columns that sits next to each other */
@@ -85,9 +92,10 @@ a {
     font-family: courier;
 }
 
-
 .navigationbar {
   font-family: courier;
+  background-color: none;
+  width: 1300px;
 }
 
 .modal {
@@ -96,8 +104,8 @@ a {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    opacity: 0;
+    background-color: #e8f9f9;
+    opacity: 0.1;
     visibility: hidden;
     transform: scale(1.1);
     transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
@@ -107,10 +115,11 @@ a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
+    background-color: #ffd99b;
     padding: 1rem 1.5rem;
     width: 24rem;
     border-radius: 0.5rem;
+
 }
 .close-button {
     float: right;
@@ -143,6 +152,7 @@ a {
 #smallText {
     font-size:x-small;
     font-weight:bold;
+    #background-color: #
 }
 
 #mediumText {
@@ -169,21 +179,33 @@ a {
   cursor: pointer;
   padding: 15px;
   border-radius: 4px;
+
 }
 
 #myBtn:hover {
-  background-color: #555;
+  background-color: #8095cc;
 }
 
 #logo {
   width: 90px;
   height: 55px;
+  background-color: #e8f9f9;
+
 }
 
 .icons {
   font-size: 20px;
-  background: black;
+  background-color: #ffd99b;
   padding:2px;
   border-radius: 50%;
+  position: relative;
+  right: 30px;
 
+}
+li a:hover {
+   background-color:#ffd99b;
+}
+
+#sizeText{
+  margin: 3%;
 }
