--- a/imagegrid.css
+++ b/imagegrid.css
@@ -9,7 +9,7 @@ body {
 
 .header {
     text-align: center;
-    padding: 32px;
+    padding: 50px;
 }
 
 .row {
@@ -17,7 +17,7 @@ body {
     display: flex;
     -ms-flex-wrap: wrap; /* IE 10 */
     flex-wrap: wrap;
-    padding: 0 4px;
+    padding: 1 1px;
 }
 
 /* Create two equal columns that sits next to each other */
@@ -36,7 +36,7 @@ body {
 
 .container {
   position: relative;
-  width: 100%;
+  width: 110%;
 }
 
 .image {
@@ -47,12 +47,12 @@ body {
 
 .overlay {
   position: absolute;
-  top: 0;
+  top: 0%;
   bottom: 0;
-  left: 0;
+  left: 4.5%;
   right: 0;
   height: 100%;
-  width: 100%;
+  width: 91.5%;
   opacity: 0;
   transition: .5s ease;
   background-color: black;
@@ -104,4 +104,14 @@ a {
 
 #myBtn:hover {
     background-color: #555; /* Add a dark-grey background on hover */
+}
+
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: red;
+   color: white;
+   text-align: center;
 }
